# Seaweed

./: README.md
carbon_og/: CMakeLists.txt  README.md  compass.pak  moop.pak
carbon_og/assets/: global_map.json  hen.mtl  map.json
carbon_og/assets/Hen/: hen.json
carbon_og/gl_lib/glad/include/glad/: glad.h
carbon_og/gl_lib/glad/src/: glad.c
carbon_og/src/: Color.hpp  asset.cpp  asset.hpp  balloon.cpp  balloon.hpp  bitmap.cpp  bitmap.hpp  bitmap_render.cpp  bitmap_render.hpp  bitstream.cpp  bitstream.hpp  bytestream.cpp  bytestream.hpp  color.cpp  crc.cpp  crc.hpp  crosspath.cpp  crosspath.hpp  date.cpp  date.hpp  fastClip.cpp  fastClip.hpp  filepath.cpp  filepath.hpp  filestream.cpp  filestream.hpp  filewrite.cpp  filewrite.hpp  id3.hpp  jpeg.cpp  jpeg.hpp  json.cpp  json.hpp  linked_map.hpp  logger.cpp  logger.hpp  main.cpp  mat.cpp  mat.hpp  measure.hpp  (+26 more)
carbon_og/src/game/: assetManager.cpp  assetManager.hpp  cube.hpp  game_main.hpp  mc_inf.hpp  player.hpp  settings.hpp  world.cpp  world.hpp
carbon_og/src/gl/: Camera.cpp  Camera.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  atlas.cpp  atlas.hpp  graphics.cpp  graphics.hpp  lighting.hpp  mesh.cpp  mesh.hpp  mush.hpp  noise.cpp  noise.hpp  obj.cpp  obj.hpp  sinc.hpp  vertex.hpp  window.cpp  window.hpp
carbon_og/src/lang/: tokens.cpp  tokens.hpp
carbon_og/src/net/: socket.hpp
carbon_og/src/shaders/: def_frag.glsl  def_vert.glsl  shadow_frag.glsl  shadow_vert.glsl
carbon_og/src/sugaro/virtual/: env.hpp
